examples/test/testpolicy3595.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3595
  namespace: namespace121
spec:
  podSelector:
    matchLabels:
      key30: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value43
      podSelector:
        matchLabels:
          key21: value3
          key8: value13
          key10: value12
